--- a/pages/index.html
+++ b/pages/index.html
@@ -11,10 +11,7 @@
 <body>
     <!-- header -->
     <header>
-
-
-        <nav
-            class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+        <nav class="bg-white dark:bg-gray-900 w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
                 <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
                     <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
@@ -59,18 +56,17 @@
                 </div>
             </div>
         </nav>
-
     </header>
 
     <!-- main -->
-    <main>
-        <div class="h-screen">
-
-        </div>
+    <main class="w-full">
+        <section class="mx-auto">
+            <div id="card-area" class="flex flex-row flex-wrap gap-4 justify-center mt-4 mx-auto max-w-screen-xl"></div>         
+        </section>
     </main>
 
     <!-- footer -->
-    <footer class="bg-white dark:bg-gray-900">
+    <footer class="bg-white dark:bg-gray-900 mt-4">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
@@ -171,10 +167,9 @@
         </div>
     </footer>
 
-
-
+    <!-- script -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
 </body>
 
 </html>
